--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,100&display=swap');
+
 .App {
   text-align: center;
+  margin-top: -5vmin;
+
 }
 
+
 .App-logo {
-  height: 40vmin;
+  height: 20vmin;
   pointer-events: none;
+  height: 23vmin;
+  /* margin-top: 30px; */
+  margin-bottom: 30px;
+  /* margin: 20px; */
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 14s linear;
   }
 }
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,16 +31,30 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+} */
+
+.hpage {
+  background-color: rgb(248, 202, 253);
+  color: rgb(159, 63, 3);
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  font-family: 'IBM Plex Mono', monospace;
 }
+
+.body1 {
+  text-align: left;
+}
+
+/* .App-link {
+  color: #61dafb;
+} */
 
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
